...
        android:text="@string/label_transaction_type"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp"
        android:visibility="visible" />

    <Spinner
        android:id="@+id/spinner_transaction_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true"
        android:dropDownWidth="match_parent"
        android:entries="@array/expense_transactions"
        android:visibility="visible" />
...
        android:layout_height="wrap_content"
        android:text="@string/label_amount_paid"
        android:textColor="@android:color/black"
        android:visibility="visible" />

    <EditText
        android:id="@+id/text_box_paid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
...
        android:id="@+id/expenses_every"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/transactions_recurring" />

    <Button
        android:id="@+id/datePicker"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="showDatePickerDialog"
        android:text="@string/pick_date"
        android:visibility="visible" />
...
        android:text="@string/label_transaction_comment"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/text_box_transactionComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
...
            android:layout_height="60dp"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:text="@string/button_clear" />

        <Button
            android:id="@+id/button_add_income"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:text="@string/button_done" />
...
