...

    //For main activity

    <string name="button_next_screen">To Budget Summary</string>
    <string name="button_previous_screen">To Graph View</string>

    <string name="button_subtract_from_budget">Add Expenses</string>
    <string name="button_add_to_budget">Add Income</string>

    <string name="label_main_menu_title">Main Menu</string>
    <string name="label_upcoming_bills">Upcoming Bills</string>
    <string name="label_current_savings">Current Savings:</string>
    <string name="label_current_budget">Current Budget:</string>
    <string name="label_financial_health">Financial Health:</string>
...
        <item>Wages</item>
        <item>Commission</item>
        <item>Gift</item>
        <item>Other</item>
    </string-array>
    <string name="radio_wages">Wages</string>
    <string name="radio_other_income">Other Income</string>
    <string name="label_hours_worked">Hours Worked :</string>
    <string name="label_hourly_wage">Hourly Wage :</string>
    <string name="label_total_amount_received">Total Amount Received</string>
    <string name="label_time_frame">Payment Interval:</string>

    //For expenses transaction types
    <string name="pick_date">Next Due On</string>
    <string name="label_transaction_type">Select Type of Transaction</string>
    <string name="label_amount_paid">Amount Paid</string>
    <string name="label_is_transaction_recurring">Is This Transaction Recurring?</string>
    <string name="label_transaction_comment">Transaction Comment</string>

    <string name="button_clear">Clear</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_done">Done</string>


    //For activity_pay_bills.xml

    <string name="button_yes">Yes, It\'s Paid</string>
    <string name="button_go_back">No, Go Back</string>
...
