<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorDarkGreen"
        android:text="@string/button_add_to_budget"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_transaction_type"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/radioIncomeType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/radioWages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radio_wages" />

        <RadioButton
            android:id="@+id/radioOther"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_other_income" />

    </RadioGroup>

    <GridLayout
        android:id="@+id/grid_wages"
        android:layout_width="wrap_content"
        android:layout_height="82dp">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="213dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="0"
            android:text="@string/label_hours_worked"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/text_hours"
            android:layout_width="156dp"
            android:layout_height="wrap_content"
            android:layout_column="7"
            android:layout_row="0"
            android:ems="10"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/text_amt_per_hour"
            android:layout_width="153dp"
            android:layout_height="wrap_content"
            android:layout_column="7"
            android:layout_row="1"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="212dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/label_hourly_wage"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

    </GridLayout>

    <TextView
        android:id="@+id/text_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/text_box_income"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <GridLayout
        android:id="@+id/grid_income_every"
        android:layout_width="match_parent"
        android:layout_height="35dp">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_time_frame"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/income_every"
            android:layout_width="241dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="0"
            android:entries="@array/transactions_recurring" />
    </GridLayout>

    <Button
        android:id="@+id/datePicker"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="showDatePickerDialog"
        android:text="@string/pick_date"
        android:visibility="visible" />

    <EditText
        android:id="@+id/text_displayDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:editable="false"
        android:inputType="none"
        android:textAlignment="center"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_transaction_comment"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/text_box_transactionComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorDarkGreen"
        android:orientation="horizontal">

        <Button
            android:id="@+id/MMButtonGVGoToMM"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:text="@string/button_cancel" />

        <Button
            android:id="@+id/button_clear"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:text="@string/button_clear" />

        <Button
            android:id="@+id/button_add_income"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:text="@string/button_done" />
    </LinearLayout>

</LinearLayout>